--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+/* .App{
+  background-color: #111;
+  color: #fff;
+} */
+
+.App .h1-area {
+  margin: 50px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* .App .h1-area select{
+  padding: 0;
+  margin: 0;
+  min-height: 30px;
+  border-radius: 20px;
+  padding: 10px;
+} */
+
+
+.App h1 small {
+  font-size: 0.4em;
+  color: #555;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h3 {
+  margin: 20px 0 30px 0;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.shown {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
+
+.grandpaContainer {
+  background: rgb(101, 110, 236);
+  color: #fff;
+  padding: 5px 20px;
+  border-radius: 10px;
+  margin-bottom: 40px;
+  
+}
+
+.parentContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  width: 100%;
+  color: #555;
+  font-weight: bold;
+  
+}
+
+
+.container {
+  margin: 10px;
+  margin-left: 0;
+  width: 18%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  background: #fff;;
+  padding: 20px;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.container ul {
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container ul li {
+  list-style: none;
 }
+
